fixed the alignment of button bar

--- a/res/css/index.css
+++ b/res/css/index.css
@@ -22,7 +22,7 @@
         min-height: 90vh;
     }
     .btnbar{
-        width: 98vw;
+        width: 97vw;
         margin-left: auto;
         margin-right: auto;
         height:4.5vw;
